# SDAL-Builder

./: README.md  build.sh  pyproject.toml  requirements.txt  sdal_build.py  validate_sdal_iso.py
src/sdal_builder/: constants.py  encoder.py  etl.py  iso.py  main.py  sdal_osmium_stream.py  spatial.py
